--- a/index.html
+++ b/index.html
@@ -6,12 +6,47 @@
     <title>London</title>
 </head>
 <body>
-    
+
     <h1>Il Mio Viaggio a Londra</h1>
         <img src="./img/pexels-bill-emrich-230794-0.jpg" width="150" alt="Ruota panoramica">
         <img src="./img/pexels-bill-emrich-230794-1.jpg" width="150" alt="Ponte">
         <img src="./img/pexels-bill-emrich-230794-2.jpg" width="150" alt="Londra">
     <hr>
 
+    <h2>Le Mie Spese</h2>
+        <table>
+            <thead>
+             <tr>               
+                <th>Numero</th>
+                <th>Descrizione</th>
+                <th>&ThinSpace; Costo</th>
+             </tr>
+            </thead>
+           <tbody>
+             <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>&ThinSpace; 120&euro;</td>
+             </tr>
 
+             <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>&ThinSpace; 120&euro;</td>
+             </tr>
+
+             <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>&ThinSpace; 120&euro;</td>
+             </tr>
+
+             <tr>
+                <td>Totale</td>
+                <td>&MediumSpace;</td>
+                <td>&MediumSpace; 360&euro;</td>
+             </tr>
+           </tbody> 
+        </table>
+    <hr>
 </html>
