--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="./img/pexels-bill-emrich-230794-2.jpg" width="150" alt="Londra">
     <hr>
 
-    <h2>Le Mie Spese</h2>
+        <h2>Le Mie Spese</h2>
         <table>
             <thead>
              <tr>               
@@ -49,4 +49,13 @@
            </tbody> 
         </table>
     <hr>
+        <h2>Cose da Fare</h2>
+            <ul>
+                <li>Visitare la tower of London &cross;</li>
+                <li>Visitare Greenwich &#10003;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+            </ul>
+    <hr>
+           
 </html>
