--- a/index.html
+++ b/index.html
@@ -57,5 +57,28 @@
                 <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
             </ul>
     <hr>
-           
+        <h2>Info utili:</h2>
+
+         <ol>
+                <li>Numeri utili di emergenza</li>
+            <ul>
+                <li><strong>999</strong> - Emergenza</li>
+                <li><strong>101</strong> - Numero Polizia</li>
+                <li><strong>111</strong> - Numero assistenza Medica</li>
+            </ul>
+
+                <li>Hotel</li>
+            <ul>
+                <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
+                <li><strong>Indirizzo Hotel:</strong>  Westminster, London SW1A 1AA, Regno Unito</li>
+            </ul>
+
+            <li>Aereo:</li>
+            <ul>
+                <li><strong>Volo di Andata:</A></strong> YI234X, ore 9.30 &ThinSpace;&ThinSpace;da Milano Malpensa</li>
+                <li><strong>Volo di Ritorno</strong> YI236X, ore 18.30 da London Heathrow</li>
+            </ul>
+         </ol>
+         <hr>
+
 </html>
