5° Step Le Foto

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 
     <h1>Il Mio Viaggio a Londra</h1>
-        <img src="./img/pexels-bill-emrich-230794-0.jpg" width="150" alt="Ruota panoramica">
-        <img src="./img/pexels-bill-emrich-230794-1.jpg" width="150" alt="Ponte">
-        <img src="./img/pexels-bill-emrich-230794-2.jpg" width="150" alt="Londra">
+        <img src="./img/pexels-bill-emrich-230794-0.jpg" width="200" alt="Ruota panoramica">
+        <img src="./img/pexels-bill-emrich-230794-1.jpg" width="200" alt="Ponte">
+        <img src="./img/pexels-bill-emrich-230794-2.jpg" width="200" alt="Londra">
     <hr>
 
         <h2>Le Mie Spese</h2>
@@ -80,5 +80,8 @@
             </ul>
          </ol>
          <hr>
-
+         <h2>Le Foto</h2>
+         <img src="./img/london-400x400.jpg" width="250" alt="Londra sfondo">
+         <img src="./img/tower-bridge.jpg" width="250" alt="Foto tower bridge">
+        
 </html>
