--- a/index.html
+++ b/index.html
@@ -19,32 +19,32 @@
              <tr>               
                 <th>Numero</th>
                 <th>Descrizione</th>
-                <th>&ThinSpace; Costo</th>
+                <th>Costo</th>
              </tr>
             </thead>
            <tbody>
              <tr>
                 <td>1</td>
                 <td>Biglietto Aereo</td>
-                <td>&ThinSpace; 120&euro;</td>
+                <td>120€</td>
              </tr>
 
              <tr>
                 <td>1</td>
                 <td>Biglietto Aereo</td>
-                <td>&ThinSpace; 120&euro;</td>
+                <td>120€</td>
              </tr>
 
              <tr>
                 <td>1</td>
                 <td>Biglietto Aereo</td>
-                <td>&ThinSpace; 120&euro;</td>
+                <td>120€</td>
              </tr>
 
              <tr>
                 <td>Totale</td>
-                <td>&MediumSpace;</td>
-                <td>&MediumSpace; 360&euro;</td>
+                <td></td>
+                <td>360€</td>
              </tr>
            </tbody> 
         </table>
@@ -75,7 +75,7 @@
 
             <li>Aereo:</li>
             <ul>
-                <li><strong>Volo di Andata:</A></strong> YI234X, ore 9.30 &ThinSpace;&ThinSpace;da Milano Malpensa</li>
+                <li><strong>Volo di Andata:</A></strong> YI234X,ore 9.30 da Milano Malpensa</li>
                 <li><strong>Volo di Ritorno</strong> YI236X, ore 18.30 da London Heathrow</li>
             </ul>
          </ol>
@@ -83,5 +83,5 @@
          <h2>Le Foto</h2>
          <img src="./img/london-400x400.jpg" width="250" alt="Londra sfondo">
          <img src="./img/tower-bridge.jpg" width="250" alt="Foto tower bridge">
-        
+</body>        
 </html>
