--- a/index.html
+++ b/index.html
@@ -1,87 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>London</title>
 </head>
+
 <body>
 
     <h1>Il Mio Viaggio a Londra</h1>
-        <img src="./img/pexels-bill-emrich-230794-0.jpg" width="200" alt="Ruota panoramica">
-        <img src="./img/pexels-bill-emrich-230794-1.jpg" width="200" alt="Ponte">
-        <img src="./img/pexels-bill-emrich-230794-2.jpg" width="200" alt="Londra">
+    <img src="./img/pexels-bill-emrich-230794-0.jpg" width="200" alt="Ruota panoramica">
+    <img src="./img/pexels-bill-emrich-230794-1.jpg" width="200" alt="Ponte">
+    <img src="./img/pexels-bill-emrich-230794-2.jpg" width="200" alt="Londra">
     <hr>
 
-        <h2>Le Mie Spese</h2>
-        <table>
-            <thead>
-             <tr>               
+    <h2>Le Mie Spese</h2>
+    <table>
+        <thead>
+            <tr>
                 <th>Numero</th>
                 <th>Descrizione</th>
                 <th>Costo</th>
-             </tr>
-            </thead>
-           <tbody>
-             <tr>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
                 <td>1</td>
                 <td>Biglietto Aereo</td>
                 <td>120€</td>
-             </tr>
+            </tr>
 
-             <tr>
+            <tr>
                 <td>1</td>
                 <td>Biglietto Aereo</td>
                 <td>120€</td>
-             </tr>
+            </tr>
 
-             <tr>
+            <tr>
                 <td>1</td>
                 <td>Biglietto Aereo</td>
                 <td>120€</td>
-             </tr>
+            </tr>
 
-             <tr>
+            <tr>
                 <td>Totale</td>
                 <td></td>
                 <td>360€</td>
-             </tr>
-           </tbody> 
-        </table>
+            </tr>
+        </tbody>
+    </table>
     <hr>
-        <h2>Cose da Fare</h2>
-            <ul>
-                <li>Visitare la tower of London &cross;</li>
-                <li>Visitare Greenwich &#10003;</li>
-                <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
-                <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
-            </ul>
+    <h2>Cose da Fare</h2>
+    <ul>
+        <li>Visitare la tower of London &cross;</li>
+        <li>Visitare Greenwich &#10003;</li>
+        <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
+        <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+    </ul>
     <hr>
-        <h2>Info utili:</h2>
+    <h2>Info utili:</h2>
 
-         <ol>
-                <li>Numeri utili di emergenza</li>
+    <ol>
+        <li>Numeri utili di emergenza
             <ul>
                 <li><strong>999</strong> - Emergenza</li>
                 <li><strong>101</strong> - Numero Polizia</li>
                 <li><strong>111</strong> - Numero assistenza Medica</li>
             </ul>
+        </li>
 
-                <li>Hotel</li>
+
+        <li>Hotel
             <ul>
                 <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
-                <li><strong>Indirizzo Hotel:</strong>  Westminster, London SW1A 1AA, Regno Unito</li>
+                <li><strong>Indirizzo Hotel:</strong> Westminster, London SW1A 1AA, Regno Unito</li>
             </ul>
+        </li>
 
-            <li>Aereo:</li>
+
+        <li>Aereo:
             <ul>
                 <li><strong>Volo di Andata:</A></strong> YI234X,ore 9.30 da Milano Malpensa</li>
                 <li><strong>Volo di Ritorno</strong> YI236X, ore 18.30 da London Heathrow</li>
             </ul>
-         </ol>
-         <hr>
-         <h2>Le Foto</h2>
-         <img src="./img/london-400x400.jpg" width="250" alt="Londra sfondo">
-         <img src="./img/tower-bridge.jpg" width="250" alt="Foto tower bridge">
-</body>        
+        </li>
+
+    </ol>
+
+    <hr>
+    <h2>Le Foto</h2>
+    <img src="./img/london-400x400.jpg" width="250" alt="Londra sfondo">
+    <img src="./img/tower-bridge.jpg" width="250" alt="Foto tower bridge">
+</body>
+
 </html>
