--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <li>Aereo:
             <ul>
-                <li><strong>Volo di Andata:</A></strong> YI234X,ore 9.30 da Milano Malpensa</li>
+                <li><strong>Volo di Andata:</strong> YI234X, ore 9.30 da Milano Malpensa</li>
                 <li><strong>Volo di Ritorno</strong> YI236X, ore 18.30 da London Heathrow</li>
             </ul>
         </li>
