--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <tr>
                 <td>Totale</td>
-                <td></td>
+                <td colspan="1"></td>
                 <td>360€</td>
             </tr>
         </tbody>
