--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-
+    
+<main>
     <h1>Il Mio Viaggio a Londra</h1>
     <img src="./img/pexels-bill-emrich-230794-0.jpg" width="200" alt="Ruota panoramica">
     <img src="./img/pexels-bill-emrich-230794-1.jpg" width="200" alt="Ponte">
@@ -92,6 +93,8 @@
     <h2>Le Foto</h2>
     <img src="./img/london-400x400.jpg" width="250" alt="Londra sfondo">
     <img src="./img/tower-bridge.jpg" width="250" alt="Foto tower bridge">
+</main>
+
 </body>
 
 </html>
