--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    
+
 <main>
     <h1>Il Mio Viaggio a Londra</h1>
     <img src="./img/pexels-bill-emrich-230794-0.jpg" width="200" alt="Ruota panoramica">
@@ -45,9 +45,11 @@
             </tr>
 
             <tr>
+            <tfoot>
                 <td>Totale</td>
                 <td colspan="1"></td>
                 <td>360€</td>
+            </tfoot>
             </tr>
         </tbody>
     </table>
